# auraseek

./: .gitignore  README.md  com.aienthusiasm.auraseek.desktop  com.aienthusiasm.auraseek.json  face.rs  index.html  package-lock.json  package.json  surreal_sidecar.rs  vite.config.ts
.github/workflows/: build-windows.yml  build.yml
docs/: README.md  surrealist-queries.md
src/: App.tsx  index.css  main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/libs/macos/: libavdevice.62.3.100.dylib  libavfilter.11.14.100.dylib  libavformat.62.12.100.dylib  libavutil.60.26.100.dylib  libopencv_calib3d.4.10.0.dylib  libopencv_core.4.10.0.dylib  libopencv_features2d.410.dylib  libopencv_flann.4.10.0.dylib  libopencv_highgui.dylib  libopencv_imgcodecs.dylib  libopencv_ml.dylib  libopencv_objdetect.410.dylib  libopencv_photo.4.10.0.dylib  libopencv_stitching.4.10.0.dylib  libopencv_video.410.dylib  libopencv_videoio.dylib  libswresample.6.3.100.dylib  libswscale.9.5.100.dylib
src-tauri/nsis/: hooks.nsh
src-tauri/src/: debug_cli.rs  fs_watcher.rs  main.rs  surreal_sidecar.rs
src-tauri/src/app/: helpers.rs  mod.rs  state.rs
src-tauri/src/app/ingest/: ingest_pipeline.rs  mod.rs
src-tauri/src/app/search/: mod.rs  search_pipeline.rs
src-tauri/src/core/: config.rs  error.rs  mod.rs
src-tauri/src/core/models/: media.rs  mod.rs  person.rs  search.rs  sync.rs
src-tauri/src/core/traits/: mod.rs  processor.rs  repository.rs  search.rs
src-tauri/src/db/: mod.rs  models.rs  mongo.rs  operations.rs  surreal.rs  vector_store.rs
src-tauri/src/debug/: cli.rs  downloader.rs  mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/ai/: engine.rs  mod.rs
src-tauri/src/infrastructure/ai/runtime/: device.rs  mod.rs  session.rs
src-tauri/src/infrastructure/ai/text/: mod.rs
src-tauri/src/infrastructure/ai/text/embedding/: encoder.rs  mod.rs  tokenizer.rs
src-tauri/src/infrastructure/ai/vision/: mod.rs
src-tauri/src/infrastructure/ai/vision/aura/: mod.rs  preprocess.rs
src-tauri/src/infrastructure/ai/vision/face/: db.rs  detector.rs  mod.rs
src-tauri/src/infrastructure/ai/vision/yolo/: detector.rs  labels.rs  mod.rs  postprocess.rs  preprocess.rs
src-tauri/src/infrastructure/database/: mod.rs  models.rs  qdrant.rs  sqlite.rs
src-tauri/src/infrastructure/database/operations/: album.rs  config.rs  duplicates.rs  embedding.rs  media.rs  mod.rs  person.rs  search.rs  trash.rs
src-tauri/src/infrastructure/fs/: mod.rs  watcher.rs
src-tauri/src/infrastructure/ingest/: image_processor.rs  mod.rs  video_processor.rs
src-tauri/src/infrastructure/network/: downloader.rs  mod.rs
src-tauri/src/infrastructure/search/: image_search.rs  mod.rs  text_search.rs
src-tauri/src/ingest/: image_ingest.rs  mod.rs  video_ingest.rs
src-tauri/src/interface/: mod.rs  streaming.rs
src-tauri/src/interface/commands/: albums.rs  init.rs  media.rs  mod.rs  people.rs  search.rs  system.rs  timeline.rs
src-tauri/src/model/: aura.rs  face.rs  mod.rs  yolo.rs
src-tauri/src/platform/: auth.rs  mod.rs  paths.rs  process.rs  setup.rs
src-tauri/src/processor/: mod.rs  pipeline.rs
src-tauri/src/processor/text/: mod.rs
src-tauri/src/processor/vision/: aura_image.rs  face_image.rs  mod.rs  yolo_image.rs  yolo_postprocess.rs
src-tauri/src/search/: image_search.rs  mod.rs  pipeline.rs  text_search.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/shared/logging/: logger.rs  mod.rs
src-tauri/src/shared/visualization/: mod.rs  visualize.rs
src-tauri/src/utils/: logger.rs  mod.rs  session.rs  visualize.rs
src/components/common/: FilterPanel.tsx  FirstRunModal.tsx  GlassCard.tsx  ModelDownloadScreen.tsx  (+5 more)
src/contexts/: SelectionContext.tsx
src/i18n/: DictionaryProvider.tsx
src/lib/: api.ts
src/theme/: ThemeProvider.tsx
src/types/: photo.type.ts
src/views/: LandingPage.tsx
(+32 files in other folders)
