[package]
name = "auraseek"
version = "1.0.0"
description = "AuraSeek"
authors = ["AI Enthusiasm"]
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
ort            = "2.0.0-rc.9"
image          = "0.24"
imageproc      = "0.23"
ab_glyph       = "0.2"
rusttype       = "0.9"
anyhow         = "1.0"
regex          = "1.10"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
opencv         = "0.92"
uuid           = { version = "1.0", features = ["v4", "v5"] }
chrono         = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq           = "2.9"
anyhow         = "1.0"