[package]
name = "auraseek"
version = "1.0.0"
description = "AuraSeek"
authors = ["AIEnthusiasm team"]
edition = "2024"

[dependencies]
tauri              = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
rayon              = "1.11"
notify-debouncer-full = "0.3"
ort                = "2.0.0-rc.9"
image              = "0.24"
imageproc          = "0.23"
ab_glyph           = "0.2"
rusttype           = "0.9"
anyhow             = "1.0"
regex              = "1.10"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
opencv             = "0.92"
uuid               = { version = "1.0", features = ["v4", "v5"] }
chrono             = { version = "0.4", features = ["serde"] }
surrealdb          = { version = "3.0.2", default-features = false, features = ["protocol-ws", "protocol-http"] }
tokio              = { version = "1", features = ["full"] }
sha2               = "0.10"
hex                = "0.4"
futures            = "0.3"
once_cell          = "1.19"
base64             = "0.22"
sysinfo            = "0.33"
reqwest            = { version = "0.12", features = ["stream"] }
notify             = "7"
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
flate2 = "1.0"
tar = "0.4"
thiserror = "2.0.18"
num_cpus = "1.17.0"
dotenvy = "0.15.7"
unicode-normalization = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq        = "2.9"
anyhow      = "1.0"
flate2      = "1.0"
tar         = "0.4"
